Fix header alignment during scroll - make sticky header identical to original white navbar

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -3226,6 +3226,7 @@ Main Header
   background: #ffffff;
   -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+  height: 72px;
 }
 @media (max-width: 991.98px) {
   .sticky-header {
@@ -3242,7 +3243,7 @@ Main Header
 .sticky-header .logo {
   padding: 5px 0;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
 }
 .sticky-header .logo img {
@@ -3261,10 +3262,11 @@ Main Header
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: flex-start;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  height: 100%;
 }
 
 .sticky-header .main-menu .navigation > li {
@@ -3876,6 +3878,7 @@ Main Header
   background: #ffffff;
   -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+  height: 72px;
 }
 @media (max-width: 991.98px) {
   .sticky-header {
@@ -3892,7 +3895,7 @@ Main Header
 .sticky-header .logo {
   padding: 5px 0;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
 }
 .sticky-header .logo img {
@@ -3943,10 +3946,11 @@ Main Header
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: flex-start;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  height: 100%;
 }
 
 .sticky-header .main-menu .navigation > li {
